--- a/app/src/main/res/layout/fragment_search_youtube_songs.xml
+++ b/app/src/main/res/layout/fragment_search_youtube_songs.xml
@@ -1,139 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.SearchYoutubeSongsFragment">
+<layout>
+    <data></data>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_search_songs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:background="@color/gold"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/listSongsYT"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintVertical_bias="0">
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search_yt_songs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:focusable="true"
-            android:focusedByDefault="true"
-            app:iconifiedByDefault="false"
-            app:queryHint="@string/title_artist_album"
-            app:searchHintIcon="@drawable/ic_search"
-            app:searchIcon="@drawable/ic_search"/>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listSongsYT"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="155dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:listitem="@layout/fragment_search_youtube_songs_item"
-        android:visibility="gone"/>
-
-    <ImageView
-        android:id="@+id/fragment_search_youtube_songs_empty_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/empty_results"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_search_youtube_songs_empty_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
-        app:layout_constraintVertical_chainStyle="packed"/>
-
-    <TextView
-        android:id="@+id/fragment_search_youtube_songs_empty_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/not_results_found_try_start_searching_something"
-        android:textSize="16dp"
-        android:layout_marginBottom="155dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_youtube_songs_empty_image"
-        app:layout_constraintVertical_chainStyle="packed"/>
-
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmerList"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".fragments.SearchYoutubeSongsFragment">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_search_songs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:background="@color/gold"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/listSongsYT"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintVertical_bias="0">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_yt_songs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:focusable="true"
+                android:focusedByDefault="true"
+                app:iconifiedByDefault="false"
+                app:queryHint="@string/title_artist_album"
+                app:searchHintIcon="@drawable/ic_search"
+                app:searchIcon="@drawable/ic_search"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listSongsYT"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="155dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:listitem="@layout/fragment_search_youtube_songs_item"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/fragment_search_youtube_songs_empty_image"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:src="@drawable/empty_results"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_search_youtube_songs_empty_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
+            app:layout_constraintVertical_chainStyle="packed"/>
+
+        <TextView
+            android:id="@+id/fragment_search_youtube_songs_empty_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_results_found_try_start_searching_something"
+            android:textSize="16dp"
+            android:layout_marginBottom="155dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_search_youtube_songs_empty_image"
+            app:layout_constraintVertical_chainStyle="packed"/>
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmerList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone">
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
 
-            <include
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                layout="@layout/fragment_song_item_skeleton"  />
-        </LinearLayout>
-    </com.facebook.shimmer.ShimmerFrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
+
+                <include
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    layout="@layout/fragment_song_item_skeleton"  />
+            </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
