feat: Syncing songs between devices
- Adding DeviceInfos Screen
- Added possibility to sync/download songs from another device
- Used foreground to sync/download songs, and also used chunks to avoid timeout when treating a lot of songs

Issue: https://github.com/GeovaniTech/ListenNow-App/issues/11 e https://github.com/GeovaniTech/ListenNow-App/issues/24

--- a/app/src/main/res/menu/play_back_bottom_menu.xml
+++ b/app/src/main/res/menu/play_back_bottom_menu.xml
@@ -9,4 +9,9 @@
         android:id="@+id/searchNewSongsFragment"
         android:title="@string/search_new_songs"
         android:icon="@drawable/ic_search" />
+
+    <item
+        android:id="@+id/deviceInfosFragment"
+        android:title="@string/fragment_device_infos_title"
+        android:icon="@drawable/ic_device_info_24" />
 </menu>
