--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,14 @@
                     app:exitAnim="@anim/to_left"
                     app:popEnterAnim="@anim/from_left"
                     app:popExitAnim="@anim/from_right" />
+
+                <action
+                    android:id="@+id/action_homeFragment_to_deviceInfosFragment"
+                    app:destination="@id/deviceInfosFragment"
+                    app:enterAnim="@anim/to_right"
+                    app:exitAnim="@anim/to_left"
+                    app:popEnterAnim="@anim/from_left"
+                    app:popExitAnim="@anim/from_right" />
         </fragment>
 
         <fragment
@@ -42,6 +50,14 @@
                 <action
                     android:id="@+id/action_searchNewSongsFragment_songDetailsFragment"
                     app:destination="@id/songDetailsFragment"
+                    app:enterAnim="@anim/to_right"
+                    app:exitAnim="@anim/to_left"
+                    app:popEnterAnim="@anim/from_left"
+                    app:popExitAnim="@anim/from_right" />
+
+                <action
+                    android:id="@+id/action_searchNewSongsFragment_to_deviceInfosFragment"
+                    app:destination="@id/deviceInfosFragment"
                     app:enterAnim="@anim/to_right"
                     app:exitAnim="@anim/to_left"
                     app:popEnterAnim="@anim/from_left"
@@ -74,5 +90,19 @@
                     app:exitAnim="@anim/to_right"
                     app:popEnterAnim="@anim/from_right"
                     app:popExitAnim="@anim/from_left" />
+        </fragment>
+
+        <fragment
+            android:id="@+id/deviceInfosFragment"
+            android:name="br.com.listennow.fragments.DeviceInfosFragment"
+            android:label="@string/fragment_device_infos_title">
+
+                <action
+                    android:id="@+id/action_deviceInfosFragment_to_songDetailsFragment"
+                    app:destination="@id/songDetailsFragment"
+                    app:enterAnim="@anim/to_right"
+                    app:exitAnim="@anim/to_left"
+                    app:popEnterAnim="@anim/from_left"
+                    app:popExitAnim="@anim/from_right" />
         </fragment>
 </navigation>
