--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="homeViewModel"
-            type="br.com.listennow.viewmodel.HomeViewModel" />
+            name="mainActivityViewModel"
+            type="br.com.listennow.viewmodel.MainActivityViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:ellipsize="end"
-                    android:text="@{homeViewModel.actualSong.name}"
+                    android:text="@{mainActivityViewModel.actualSong.name}"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="@{homeViewModel.actualSong.artist}"
+                    android:text="@{mainActivityViewModel.actualSong.artist}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/list_songs_title"
                     tools:text="Taylor Swift" />
@@ -103,7 +103,7 @@
                     android:id="@+id/home_thumb_song_details"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:bindImage="@{homeViewModel.actualSong.thumb}"
+                    app:bindImage="@{mainActivityViewModel.actualSong.thumb}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
