--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -41,6 +41,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/fragment_albums_item" />
+            tools:listitem="@layout/fragment_albums_item"
+            android:layout_marginBottom="155dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
