--- a/app/src/main/res/layout/fragment_albums_item.xml
+++ b/app/src/main/res/layout/fragment_albums_item.xml
@@ -15,54 +15,55 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp">
 
                 <ImageView
                     android:id="@+id/albums_item_image"
-                    android:layout_width="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    tools:src="@drawable/album"
                     app:bindImage="@{albumItemDecorator.thumb}"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/album" />
 
                 <TextView
                     android:id="@+id/albums_item_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="From Zero"
+                    android:layout_marginTop="8dp"
                     android:text="@{albumItemDecorator.name}"
-                    app:layout_constraintTop_toBottomOf="@id/albums_item_image"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:layout_marginTop="8dp"/>
+                    app:layout_constraintEnd_toEndOf="@id/albums_item_image"
+                    app:layout_constraintStart_toStartOf="@id/albums_item_image"
+                    app:layout_constraintTop_toBottomOf="@id/albums_item_image"
+                    tools:text="From Zero"
+                    android:maxLines="1"
+                    android:ellipsize="end" />
 
                 <TextView
                     android:id="@+id/albums_item_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Linkin Park"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:text="@{albumItemDecorator.artist}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/albums_item_name" />
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_play"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/albums_item_name"
-                    app:layout_constraintBottom_toBottomOf="@id/albums_item_artist"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/albums_item_image"
+                    app:layout_constraintStart_toStartOf="@id/albums_item_image"
+                    app:layout_constraintTop_toBottomOf="@id/albums_item_name"
+                    tools:text="Linkin Park" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
