--- a/app/src/main/res/menu/play_back_bottom_menu.xml
+++ b/app/src/main/res/menu/play_back_bottom_menu.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/round_add_home_24" />
 
     <item
+        android:id="@+id/albumsFragment"
+        android:title="@string/albums"
+        android:icon="@drawable/ic_album" />
+
+    <item
         android:id="@+id/searchNewSongsFragment"
         android:title="@string/search_new_songs"
         android:icon="@drawable/ic_search" />
