fix: Applying default style to searchBar
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/36

--- a/app/src/main/res/layout/fragment_search_youtube_songs.xml
+++ b/app/src/main/res/layout/fragment_search_youtube_songs.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
             android:background="@color/gold"
-            app:cardUseCompatPadding="true"
+            app:cardUseCompatPadding="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,8 +27,9 @@
                 android:id="@+id/search_yt_songs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="5dp"
                 android:focusable="true"
+                app:queryBackground="@android:color/transparent"
                 android:focusedByDefault="true"
                 app:iconifiedByDefault="false"
                 app:queryHint="@string/title_artist_album"
