--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
             android:id="@+id/card_search_songs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
+            app:cardUseCompatPadding="false"
             android:layout_margin="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,12 +28,13 @@
                 android:id="@+id/search_yt_songs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="5dp"
                 app:iconifiedByDefault="false"
                 app:queryHint="@string/title_artist_album"
                 app:searchHintIcon="@drawable/ic_search"
                 app:searchIcon="@drawable/ic_search"
-                android:focusable="true" />
+                android:focusable="true"
+                app:queryBackground="@android:color/transparent" />
         </androidx.cardview.widget.CardView>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
