--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -8,6 +8,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <br.com.listennow.components.EmptyState
+            android:id="@+id/albums_empty_state"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:message="@string/albums_no_albums_found_empty_state"
+            android:layout_marginBottom="155dp"
+            android:visibility="gone" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/albums_search_bar"
             android:layout_width="match_parent"
