--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="background">#001822</color>
     <color name="playBackButtonsColor">#191921</color>
     <color name="iconColor">#FFFFFF</color>
+    <color name="red">#E53935</color>
 </resources>
